1) add more fields (tracked and untracked) and methods to edit them 2) create and delete customer - tracked actions if done through app, not manually in DB 3) detailed output in log during operations on customers 4) spring boot 3.0.0 + Hibernate with LocalDateTime support in @RevisionTimestamp 5) rename some classes and fields 6) delete unnecessary files and comments 7) Ukrainian readme